--- a/lava-multinode.yaml
+++ b/lava-multinode.yaml
@@ -45,7 +45,7 @@ actions:
    - host3
    image:
      name: ubuntu:20.04
-     local: True
+     local: False
    os: debian
    timeout:
      minutes: 68800
