--- a/lava-multinode.yaml
+++ b/lava-multinode.yaml
@@ -66,7 +66,7 @@ actions:
     timeout:
       minutes: 68800
     definitions:
-    - repository: https://github.com/veeraready/lava-demo.git
+    - repository: git@github.com:veeraready/lava-demo.git
       from: git
       path: talker.yaml
       name: tests
@@ -77,7 +77,7 @@ actions:
     timeout:
       minutes: 68800
     definitions:
-    - repository: https://github.com/veeraready/lava-demo.git
+    - repository: git@github.com:veeraready/lava-demo.git
       from: git
       path: listener.yaml
       name: tests
@@ -88,7 +88,7 @@ actions:
     timeout:
       minutes: 68800
     definitions:
-    - repository: https://github.com/veeraready/lava-demo.git
+    - repository: git@github.com:veeraready/lava-demo.git
       from: git
       path: controller.yaml
       name: tests
